# Collector-Robot

./: CMakeLists.txt  package.xml
models/Two_Rooms/: model.config  model.sdf
models/final/: model.sdf
models/last_version/: model.config  model.sdf
models/map/: model.sdf
models/update/: model.config  model.sdf
src/: client_pick_balls.py  environment.py  run.py  skills.py
srv/: navigation.srv  objects_location.srv  pick.srv  place.srv  robot_location.srv
worlds/: our.world
